--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "6.7.2",
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "4.0.9",
     "@tanstack/react-query": "^5.67.2",
     "@types/react-router-dom": "^5.3.3",
