--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "4.0.9",
     "@tanstack/react-query": "^5.67.2",
     "@types/react-router-dom": "^5.3.3",
+    "@types/websocket": "^1.0.10",
     "aos": "^3.0.0-beta.6",
     "axios": "1.8.2",
     "chart.js": "^4.4.8",
