--- a/client/package.json
+++ b/client/package.json
@@ -27,10 +27,10 @@
     "jwt-decode": "4.0.0",
     "lucide-react": "^0.482.0",
     "motion": "^12.5.0",
-    "react": "19.0.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.2.1",
-    "react-dom": "19.0.0",
+    "react-dom": "^18.3.1",
     "react-error-boundary": "^5.0.0",
     "react-fontawesome": "^1.7.1",
     "react-google-recaptcha": "^3.1.0",
