--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "6.7.2",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "4.0.9",
     "@tanstack/react-query": "^5.67.2",
@@ -28,6 +30,7 @@
     "lucide-react": "^0.482.0",
     "motion": "^12.5.0",
     "react": "19.0.0",
+    "react-big-calendar": "^1.18.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "19.0.0",
@@ -48,6 +51,7 @@
     "@types/aos": "^3.0.7",
     "@types/locomotive-scroll": "^4.1.4",
     "@types/react": "19.0.10",
+    "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^9.17.0",
