--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.5.0",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jwt-decode": "4.0.0",
     "lucide-react": "^0.482.0",
@@ -38,6 +39,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.5.2",
+    "react-to-print": "^3.1.0",
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.5",
     "tailwindcss": "4.0.9",
