--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.5",
     "tailwindcss": "4.0.9",
+    "ts-node": "^10.9.2",
     "web-vitals": "^4.2.4"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/aos": "^3.0.7",
     "@types/locomotive-scroll": "^4.1.4",
+    "@types/node": "^24.0.4",
     "@types/react": "19.0.10",
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "19.0.4",
